--- a/slideshow.html
+++ b/slideshow.html
@@ -30,6 +30,15 @@
                 gap: 20px;
             }
 
+            .slide-heading {
+                font-size: 1.5rem;
+                text-align: center;
+                margin: 16px auto;
+                font-weight: 600;
+                color: #333;
+                font-family: system-ui, sans-serif;
+            }
+
             .slideshow-container {
                 position: relative;
                 width: 720px;
@@ -117,6 +126,7 @@
         <div class="row">
             <!-- Bloc 1 -->
             <div class="slideshow-container">
+                <h1 class="slide-heading">Slide changed: -- ➡️ --</h1>
                 <div class="slide-wrapper">
                     <div class="slide-item">
                         <img
@@ -167,6 +177,7 @@
 
             <!-- Block 2 -->
             <div class="slideshow-container">
+                <h1 class="slide-heading">Slide changed: -- ➡️ --</h1>
                 <div class="slide-wrapper">
                     <div class="slide-item">
                         <img
