--- a/tinder.html
+++ b/tinder.html
@@ -48,7 +48,7 @@
                 overflow: hidden;
                 touch-action: none;
                 user-select: none;
-                background: #fff; /* fallback nếu ảnh lỗi */
+                background: #fff;
                 border: 4px solid transparent;
                 transition: transform 0.3s ease, opacity 0.3s ease,
                     border-color 0.3s ease;
